kube-tomcat-demo.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: tomcat-demo
  creationTimestamp: 
  labels:
    run: tomcat-demo
spec:
  selector:
    matchLabels:
      run: tomcat-demo
  template:
    metadata:
      creationTimestamp: 
      labels:
        run: tomcat-demo
    spec:
      containers:
      - name: tomcat-demo
        image: jfcportal:5000/tomcat-demo:latest
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /demo-1.0/health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        resources: {}
  strategy: {}
status: {}
