service.yaml
kind: Service
apiVersion: v1
metadata: 
 name: "tomcat-demo"
 labels: 
  run: "tomcat-demo"
spec:
 clusterIP: None 
 ports: 
  - 
   protocol: TCP
   port: 80
   targetPort: 8080
 selector: 
  run: "tomcat-demo"
status: 
 loadBalancer:
